--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,3 +67,15 @@ body {
 .toast-error{
   background-color: red !important;
 }
+::-webkit-scrollbar {
+  display: none;
+  background: transparent;
+}
+.neumorphism-invards {
+  border: none;
+  box-shadow: 0.2rem 0.3rem 2rem #007dfbe3, -0.2rem -0.2rem 0.5rem #000000de !important;
+}
+.neumorphism-outwards {
+  border: none;
+  box-shadow: inset 0.2rem 0.2rem 0.5rem #007dfbe3, inset -0.2rem -0.2rem 0.5rem #000000de;
+}
