--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,3 +79,12 @@ body {
   border: none;
   box-shadow: inset 0.2rem 0.2rem 0.5rem #007dfbe3, inset -0.2rem -0.2rem 0.5rem #000000de;
 }
+
+.card-display{
+  .mat-dialog-container{
+    background: linear-gradient(
+41deg, $background-secondary 56%, $background 59%, $background-secondary 66%);
+font-size: $font-size;
+  color: $font-color-primary;
+  }
+}
