--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="logout" (click)="logout()">
-  <img src="assets/svgs/logout.png">
+  <img src="../../assets/svgs/logout.png">
   <label >logout</label>
 </div>
 <div class="refresh" *ngIf="showRefresh" (click)="refresh()">
