--- a/src/app/shared/shared/paginators/paginators.component.html
+++ b/src/app/shared/shared/paginators/paginators.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row d-flex flex-row flex-nowrap">
     <div (click)="scrolling('l')" class="col-lg-1">
-      <img  src="assets/svgs/Arrow-left-movie-now.png" class="arrows" alt="Right Arrow">
+      <img  src="../../../../assets/svgs/Arrow-left-movie-now.png" class="arrows" alt="Right Arrow">
     </div>
     <div class="col-lg-10 d-flex flex-row  centered" #scrollable>
       <div (click)="selectedIndex(i+1)"
@@ -11,7 +11,7 @@
 
     </div>
     <div (click)="scrolling('r')" class="col-lg-1">
-      <img  src="assets/svgs/Arrow-left-movie-now.png" class="arrows right" alt="Right Arrow">
+      <img  src="../../../../assets/svgs/Arrow-left-movie-now.png" class="arrows right" alt="Right Arrow">
     </div>
   </div>
 </div>
