Attached the images

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -4,7 +4,7 @@
     <div class="container">
   <div class="row">
     <div class="col-lg-12 centralize img-div">
-      <img src="../../assets/svgs/lion.jpg" alt="">
+      <img src="https://movies-now.s3.ap-south-1.amazonaws.com/lion.jpg" alt="">
     </div>
   </div>
       <div class="row">
